# evolution

./: (1,0.7,30).json  (1,0.7,40).json  (1,0.7,50).json  (1,1.3,30).json  (1,1.3,40).json  (1,1.3,50).json  (1,2,30).json  (1,2,40).json  1climber.json  Climber.npy  Walker.npy  climber.json  notes.txt  pyproject.toml  solution.json
project/: Climber.py  Thrower.npy  Thrower.py  Train_climber.py  Train_thrower.py  Train_walker.py  Walker.py  cmaes_test.py  evaluate.py  evogym.ipynb  evogym_ray_CMAES_V1_fonctionne.py  evogym_ray_V1_CMAES_coevolution_fonctionne.py  evolve_tools.py  evosim_ray.py  gif.ipynb  ray_CMAES.py  ray_CMAES_coevolution.py  setup_env.md  solution.json  teste.py
project/final_solutions/: Thrower-v0.json  Walker-v0.json
project/initial_aid/: evogym.ipynb  evosim_ray.py
project/intermediate_solutions/Walker/: final_walker_2.json  final_walker_3.json
project/solutions/Walker/: first_walker.json
