[project]
name = "evolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cma>=4.0.0",
    "cmaes>=0.11.1",
    "evogym>=2.0.0",
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "ray>=2.44.1",
    "ribs>=0.7.1",
    "setuptools>=78.1.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
